<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.patient.fragments.settings.SettingsFragment">

    <View
        android:id="@+id/appBarBg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/white"
        android:elevation="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/notifications"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:elevation="@dimen/_4sdp"
        android:paddingHorizontal="@dimen/_6sdp"
        android:src="@drawable/ic_notification"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/appBarBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/appBarBg" />

    <TextView
        android:id="@+id/appBarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/settings_lbl"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@id/appBarBg"
        app:layout_constraintEnd_toEndOf="@id/appBarBg"
        app:layout_constraintStart_toStartOf="@id/appBarBg"
        app:layout_constraintTop_toTopOf="@id/appBarBg" />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="0dp"
        android:elevation="@dimen/_45sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/appBarBg"
        app:layout_constraintStart_toStartOf="@id/appBarBg"
        app:layout_constraintTop_toTopOf="@id/appBarBg"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/aboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:drawableStart="@drawable/ic_info_circle"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/_15sdp"
        android:text="@string/about_us_lbl"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarTitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/devider"
        app:layout_constraintEnd_toEndOf="@id/aboutUs"
        app:layout_constraintStart_toStartOf="@id/aboutUs"
        app:layout_constraintTop_toBottomOf="@id/aboutUs" />

    <TextView
        android:id="@+id/privacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_privacy_policy"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/_15sdp"
        android:text="@string/privacy_policy_lbl"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        app:layout_constraintVertical_chainStyle="packed" />


    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/devider"
        app:layout_constraintEnd_toEndOf="@id/aboutUs"
        app:layout_constraintStart_toStartOf="@id/aboutUs"
        app:layout_constraintTop_toBottomOf="@id/privacyPolicy" />


    <TextView
        android:id="@+id/termsOfService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_document"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/_15sdp"
        android:text="@string/terms_of_service_lbl"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintVertical_chainStyle="packed" />


    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/devider"
        app:layout_constraintEnd_toEndOf="@id/aboutUs"
        app:layout_constraintStart_toStartOf="@id/aboutUs"
        app:layout_constraintTop_toBottomOf="@id/termsOfService" />


    <TextView
        android:id="@+id/deleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_info_circle"
        android:drawablePadding="@dimen/_15sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/delete_account_lbl"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>