<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_15sdp">


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/profileImage"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_user_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:roundPercent="0.5" />

    <TextView
        android:id="@+id/welComeLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome_lbl"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="John Smith"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@+id/welComeLbl" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/profileClickGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="profileImage,userName,welComeLbl"/>

    <TextView
        android:id="@+id/drawerHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_drawer_home"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/_10sdp"
        android:text="Home"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/drawerSettings"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/drawerSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:drawableStart="@drawable/ic_drawer_setting"
        android:drawablePadding="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:text="Settings"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/drawerContactUs"
        app:layout_constraintTop_toBottomOf="@+id/drawerHome" />

    <TextView
        android:id="@+id/drawerContactUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:drawableStart="@drawable/ic_drawer_message"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/_10sdp"
        android:text="Contact Us"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/drawerCustomerSupport"
        app:layout_constraintTop_toBottomOf="@+id/drawerSettings" />

    <TextView
        android:id="@+id/drawerCustomerSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:drawableStart="@drawable/ic_drawer_calling"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/customer_support_lbl"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/drawerLogout"
        app:layout_constraintTop_toBottomOf="@+id/drawerContactUs" />

    <TextView
        android:id="@+id/drawerLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_drawer_logout"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginBottom="@dimen/_80sdp"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/log_out_lbl"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp"

        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>