<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_15sdp"
    tools:context=".ui.patient.fragments.profile.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/userImage"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_user_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundPercent="0.2" />


            <TextView
                android:id="@+id/profileEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableEnd="@drawable/ic_edit_profile"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="Edit"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@id/userImage"
                app:layout_constraintStart_toStartOf="@id/userImage"
                app:layout_constraintTop_toBottomOf="@id/userImage" />

            <TextView
                android:id="@+id/nameLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="Name"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileEdit" />


            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:background="@drawable/edt_bg"
                android:drawablePadding="@dimen/_6sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="Jane Smith"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:drawableStartCompat="@drawable/ic_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameLbl" />


            <TextView
                android:id="@+id/dateOfBirthLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="Date of birth"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name" />


            <TextView
                android:id="@+id/dateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:background="@drawable/edt_bg"
                android:drawablePadding="@dimen/_6sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="29 April 1995"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:drawableStartCompat="@drawable/ic_calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateOfBirthLbl" />

            <TextView
                android:id="@+id/genderLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="Gender"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateOfBirth" />


            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:background="@drawable/edt_bg"
                android:drawablePadding="@dimen/_6sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="Male"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:drawableStartCompat="@drawable/ic_gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genderLbl" />

            <TextView
                android:id="@+id/emailLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email_lbl"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender" />


            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:background="@drawable/edt_bg"
                android:drawablePadding="@dimen/_6sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="janesmith@gmail.com"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:drawableStartCompat="@drawable/ic_message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailLbl" />

            <TextView
                android:id="@+id/phoneLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/phone_number_lbl"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:background="@drawable/edt_bg"
                android:drawablePadding="@dimen/_6sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="9865543145"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:drawableStartCompat="@drawable/ic_calling"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneLbl" />

            <TextView
                android:id="@+id/addressLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/address_lbl"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:background="@drawable/edt_bg"
                android:drawablePadding="@dimen/_6sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="top"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="SomeWhere in india"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:drawableStartCompat="@drawable/ic_location_outline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addressLbl" />

            <TextView
                android:id="@+id/myReportsLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/reports_lbl"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address" />


            <TextView
                android:id="@+id/addReport"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/corner_radius_dots"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="@dimen/_35sdp"
                android:text="@string/add_reports_lbl"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/myReportsLbl" />

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_35sdp"
                android:src="@drawable/ic_upload_icon"
                app:layout_constraintBottom_toBottomOf="@id/addReport"
                app:layout_constraintEnd_toEndOf="@id/addReport"
                app:layout_constraintStart_toStartOf="@id/addReport"
                app:layout_constraintTop_toTopOf="@id/addReport" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/patientReportsRv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_5sdp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="@id/addReport"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/addReport"
                app:layout_constraintTop_toBottomOf="@+id/myReportsLbl"
                app:layout_constraintTop_toTopOf="@+id/addReport"
                tools:listitem="@layout/item_patient_report" />

            <TextView
                android:id="@+id/myAdminReportsLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/blood_reports_lbl"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addReport" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/patientAdminReportsRv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_minus10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/myAdminReportsLbl"
                tools:listitem="@layout/item_patient_admin_report" />

            <View
                android:id="@+id/loader"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/something_went_wrong_lbl"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>